# spaceapss-Mugiwaras

./: .gitignore  GUIA_USO.md  README.md  proccess_batch.py  requirements.txt
agents/: .env.example  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  CHANGES.md  DISPERSAO_NOS.md  Dockerfile  ENV_VARS.md  FIX_REDIS_ERROR.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  Makefile  QUICKSTART.md  RAG_IMPLEMENTATION.md  README.md  README_RUN.md  TROUBLESHOOTING.md  TYPESCRIPT_INTERFACES_CHANGES.md  build_knowledge_graph.py  call_and_insert_in_DB.py  docker-compose.yaml  docker-compose.yml  proccess_batch.py  process_with_embeddings.py  pyproject.toml  retrieved_results.txt  setup_cosmos.sh  startup.sh  test_integration.py  test_vector_search.py
agents/extract/: __init__.py  enrichment_pipeline.py  extractor.py  fetchers.py  models.py  ncbi_fetcher.py
agents/spaceapss_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/: local.settings.json  requirements.txt
api/extract/: __init__.py  extractor.py  sectionizer.py
api/shared/: fetchers.py  sectionizer.py
api/vectorDatabase/: vectorStore.py
front/: .dockerignore  Dockerfile  MARKDOWN_FORMATTING.md  README.md  docker-compose.yaml  index.html  package-lock.json  package.json
front/src/: App.tsx  index.css  types.ts
front/src/components/: ArticleDetailModal.tsx  ArticleModal.tsx  ChatBox.tsx  GraphStatsView.tsx  GraphViewer.tsx  GraphVisualization.tsx  ImageViewer.tsx  MarkdownContent.tsx  MessageBubble.tsx  NodeDetailsModal.tsx  SourcesList.tsx
front/src/lib/: api.ts
scripts/: test_extract_locally.py
web/: app.js  index.html
